Fixed spacing

--- a/src/app/components/nubs/poppitypop/poppitypop.component.scss
+++ b/src/app/components/nubs/poppitypop/poppitypop.component.scss
@@ -10,8 +10,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 0;
 
     &.open {
+        opacity: 1;
         top: 0;
     }
 
